# land-SCF_proc

./: .gitignore  CMakeLists.txt  README.md  build.sh  hera_modules  ims_to_sncov_modgrid_fortpack.py  imsgridmap.f90  pull_request_template.md  readme
jediPyPlot/: README.md
sorc/: CMakeLists.txt  IMSaggregate_mod.f90  Makefile  SCFaggregate_mod.f90  aggregate_mod.f90  build.sh  driver_fIMS.f90  driver_fSCF.f90  makefile.sh
sorc/calc_fIMS/: IMSaggregate_mod.f90  IMSaggregate_serial_mod.f90  Makefile  driver_fIMS_serial.f90
sorc/calc_indx/: imsgridmap.f90
sorc/cmake/: land-IMS_proc_compiler_flags.cmake
test/: README.md  fims.nml  submit_ims_job.sh  submit_ims_job_ascii.sh  submit_job.sh  submit_job_ascii.sh  submit_viirs_job.sh
test/output/: IMSfSCA.tile1.nc  IMSfSCA.tile2.nc  IMSfSCA.tile3.nc  IMSfSCA.tile4.nc  IMSfSCA.tile5.nc  IMSfSCA.tile6.nc  IMSscf.20191215.C48.nc
utils/jediPyPlot/: diffData.sh  plot_jedi_tiles.py  plot_surface_jedi_tiles.py
